<resources>
    <string name="app_name">My Face</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="random_face">Random Face</string>
    <string name="hair">Hair</string>
    <string name="hair_choices">Hair Choices</string>
    <string name="eyes">Eyes</string>
    <string name="skin">Skin</string>
    //spinner options
    <string-array name="spinnerOptions" >
    <item>Braid</item>
    <item>Ponytail</item>
    <item>Straight</item>
    <item>Curly</item>
    </string-array>


</resources>